# whois-email

./: .env  Cargo.toml
migrations/2020-05-08-130052_mail_queue/: down.sql  up.sql
src/: client.rs  main.rs  models.rs  proto.rs  schema.rs  sender.rs  server.rs
templates/: confirm_email.html  confirm_email.txt
