[package]
name = "whois-mail"
version = "0.1.0"
authors = ["Q <q@misell.cymru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["tcp", "macros", "dns", "io-util", "rt-core", "blocking", "rt-threaded", "time"] }
trust-dns-resolver = "*"
chrono = "0.4"
mailparse = "0.12"
futures = "0.3"
quoted_printable = "0.4"
base64 = "0.12"
tokio-native-tls = "0.1"
native-tls = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
diesel_migrations = "1"
diesel = { version = "1", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.9.0"
uuid = { version = "0.6", features = ["v4"] }
tera = "1"
lazy_static = "1"
lettre = "0.9"
lettre_email = "0.9"
time = "0.1"